Add google logo

--- a/google-search/assets/css/master.styl
+++ b/google-search/assets/css/master.styl
@@ -15,9 +15,11 @@ body
       inline-list()
       li
         .goog
-          padding 8px
-          bold()
-          width 58px
+          img
+            width 92px
+            position relative
+            top 5px
+            margin-left 15px
         .search
           width 600px
           background-color #FFF
