--- a/google-search/views/index.jade
+++ b/google-search/views/index.jade
@@ -4,7 +4,9 @@ block content
   header
     ul 
       li.one 
-        .goog Google
+        .goog
+          .googimg
+            img(src="https://www.google.com/images/srpr/logo11w.png")
       li.two
         .search
           .searchb
