Add margin to align part of navbar

--- a/google-search/assets/css/master.styl
+++ b/google-search/assets/css/master.styl
@@ -78,6 +78,9 @@ body
     .onesub
       col(1/8)
       text-align center
+    .more
+      position relative
+      margin-top 3px
     li:last-child
       col(1/4)
       text-align center 
