--- a/google-search/views/index.jade
+++ b/google-search/views/index.jade
@@ -33,7 +33,7 @@ block content
       li.onesub 
         a(href="#")
           p News
-      li.onesub 
+      li.onesub(class="more")
         a(href="#")
           p More
           .tri
